# fullstack-rust-app

./: Cargo.toml  Makefile  README.md
backend/: Cargo.toml
backend/migrations/: 20230303140608_init.down.sql  20230303140608_init.up.sql
backend/src/: handler.rs  model.rs  schema.rs
common/: .gitignore  Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Makefile  Trunk.toml  index.html  tailwind.config.js
frontend/src/: api.rs  main.rs  store.rs
frontend/src/api/: feedback_api.rs  mod.rs  types.rs
frontend/src/components/: alert.rs  feedback_form.rs  feedback_item.rs  feedback_list.rs  feedback_stats.rs  mod.rs  rating.rs
frontend/styles/: tailwind.css
